fixed slight horizontal scroll

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -34,7 +34,7 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   width: 100vw;
-  min-width: 375px;
+  min-width: 350px;
   margin: 0 auto;
   position: relative;
   /// Removes highlight when clicking/tapping
